Html e Css feito até o título dos produtos.

--- a/home/index.html
+++ b/home/index.html
@@ -33,12 +33,12 @@
 
     <main>
         <div class="banner">
-            <img src="../assets/icons/banner1.png" alt="Banner principal">
+            <img src="../assets/imgs/banner1.png" alt="Banner principal">
         </div>
 
         <div class="about">
             <div>
-                <img src="../assets/icons/imagem-Ilu1.png" alt="Ilustração celulares">
+                <img src="../assets/imgs/imagem-Ilu1.png" alt="Ilustração celulares">
             </div>
 
             <div class="texto-about">
@@ -47,7 +47,38 @@
                 <p>Nosso compromisso é proporcionar uma experiência de compra simples, rápida e segura, com um atendimento dedicado para te ajudar a escolher o celular perfeito. Na <strong>Cellisfy</strong>, estamos aqui para conectar você com o que há de melhor em tecnologia.</p>
             </div>
         </div>
+
+        <div class="banner2">
+            <div>
+                <img src="../assets/imgs/Banner2.png" alt="">
+            </div>
+
+            <div class="produtos">
+                <h2>Nossos Produtos</h2>
+                <input type="" placeholder="Iphone" id="produtos-pesquisa">
+            </div>
+        </div>
+
+        <section class="celulares">
+            <div class="iphone">
+                <h2>Iphone</h2>
+                <div class="produtos-iphone">
+                    <div>
+                        <h3>Iphone 16</h3>
+                        <img src="../assets/imgs/iphone16.png" alt="Iphone 16">
+                        <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
+                        
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </section>
     </main>
+
+    
 
 </body>
 </html>
