Main da página concluído!

--- a/home/index.html
+++ b/home/index.html
@@ -33,7 +33,8 @@
 
     <main>
         <div class="banner">
-            <img src="../assets/imgs/banner1.png" alt="Banner principal">
+            <img src="../assets/imgs/bannersite.png
+            " alt="Banner principal">
         </div>
 
         <div class="about">
@@ -64,20 +65,26 @@
                 <h2>Iphone</h2>
                 <div class="produtos-iphone">
                     <div>
-                        <h3>Iphone 16</h3>
-                        <img src="../assets/imgs/iphone16.png" alt="Iphone 16">
+                        <div class="zoom">
+                            <h3>Iphone 16</h3>
+                            <img src="../assets/imgs/iphone16.png" alt="Iphone 16">  
+                        </div>
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
                     <div>
-                        <h3>Iphone 15</h3>
-                        <img src="../assets/imgs/iphone15.png" alt="Iphone 15">
+                        <div class="zoom">
+                            <h3>Iphone 15</h3>
+                            <img src="../assets/imgs/iphone15.png" alt="Iphone 15">
+                        </div>
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
                     <div>
-                        <h3>Iphone 14</h3>
-                        <img src="../assets/imgs/iphone14.png" alt="Iphone 14">
+                        <div class="zoom">
+                            <h3>Iphone 14</h3>
+                            <img src="../assets/imgs/iphone14.png" alt="Iphone 14">
+                        </div>
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
@@ -88,20 +95,26 @@
                 <h2>Samsung</h2>
                 <div class="produtos-samsung">
                     <div>
-                        <h3>Galaxy A56 5G</h3>
-                        <img src="../assets/imgs/galaxya56.png" alt="Galaxy A56 5G">
+                        <div class="zoom">
+                            <h3>Galaxy A56 5G</h3>
+                            <img src="../assets/imgs/galaxya56.png" alt="Galaxy A56 5G">
+                        </div>
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
                     <div>
-                        <h3>Galaxy A36 5G</h3>
-                        <img src="../assets/imgs/galaxya36.png" alt="Galaxy A36 5G">
+                        <div class="zoom">
+                            <h3>Galaxy A36 5G</h3>
+                            <img src="../assets/imgs/galaxya36.png" alt="Galaxy A36 5G">
+                        </div>
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
                     <div>
-                        <h3>Galaxy S25 Ultra</h3>
-                        <img src="../assets/imgs/galaxys25u.png" alt="Galaxy S25 Ultra">
+                        <div class="zoom">
+                            <h3>Galaxy S25 Ultra</h3>
+                            <img src="../assets/imgs/galaxys25u.png" alt="Galaxy S25 Ultra">
+                        </div>
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
@@ -113,20 +126,27 @@
                 <h2>Xiaomi</h2>
                 <div class="produtos-xiaomi">
                     <div>
-                        <h3>Xiaomi Mix Flip</h3>
-                        <img src="../assets/imgs/xiaomimflip.png" alt="Xiaomi Mix Flip">
+                        <div class="zoom">
+                            <h3>Xiaomi Mix Flip</h3>
+                            <img src="../assets/imgs/xiaomimflip.png" alt="Xiaomi Mix Flip">
+                        </div>
+                        
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
                     <div>
-                        <h3>Galaxy A36 5G</h3>
-                        <img src="../assets/imgs/xiaomi14tpro.png" alt="Xiaomi 14T Pro">
+                        <div class="zoom">
+                            <h3>Galaxy A36 5G</h3>
+                            <img src="../assets/imgs/xiaomi14tpro.png" alt="Xiaomi 14T Pro">
+                        </div>
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
                     <div>
-                        <h3>Poco F6 Pro</h3>
-                        <img src="../assets/imgs/pocof6pro.png" alt="Poco F6 Pro">
+                        <div class="zoom">
+                            <h3>Poco F6 Pro</h3>
+                            <img src="../assets/imgs/pocof6pro.png" alt="Poco F6 Pro">
+                        </div>
                         <p>A partir de R$ 649,92 / mês ou R$ 7.799</p>
                         <button>Comprar</button>
                     </div>
@@ -148,7 +168,44 @@
     </main>
 
     <footer>
-        
+        <div>
+
+            <img src="../assets/icons/Logo2.svg" alt="">
+        </div>
+
+        <div class="informacoes">
+            <div class="redes">
+                <p>Nos sigam também</p>
+                <a href="https://www.instagram.com/yasmrqz"><img src="../assets/icons/instagram.svg" alt="instagram"></a>
+                <a href="https://www.instagram.com/yasmrqz"><img src="../assets/icons/x.svg" alt="twitter"></a>
+                <a href="https://www.linkedin.com/in/yasmin-marques-547641247/"><img src="../assets/icons/linkedin.svg" alt="linkedin"></a>
+            </div>
+
+            <div class="suporte">
+                <h2>Atendimento ao Cliente</h2>
+
+                <div class="aaa">
+                    <p>Seg. a Sex. -9h ás 18h</p>
+                    <p>Perguntas Frequentes</p>
+                    <p>Rastrear Pedido</p>
+                    <p>Contato</p>
+                </div>
+
+            </div>
+
+            <div class="help">
+                <div class="poin">
+                    <img src="../assets/icons/local.svg" alt="Point">
+                    <p>Rua da Conexão Movel 404<br>12345-678 - São Paulo</p>
+                </div>
+
+                <div class="email">
+                    <img src="../assets/icons/email.svg" alt="email">
+                    <p>contato@cellisfy.com.br</p>
+                </div>
+            </div>
+
+        </div>
     </footer>
 
 </body>
