--- a/home/index.html
+++ b/home/index.html
@@ -168,33 +168,32 @@
     </main>
 
     <footer>
-        <div>
-
+        <div class="logo">
             <img src="../assets/icons/Logo2.svg" alt="">
         </div>
 
         <div class="informacoes">
             <div class="redes">
                 <p>Nos sigam também</p>
+                <div class="icones-redes">
                 <a href="https://www.instagram.com/yasmrqz"><img src="../assets/icons/instagram.svg" alt="instagram"></a>
                 <a href="https://www.instagram.com/yasmrqz"><img src="../assets/icons/x.svg" alt="twitter"></a>
                 <a href="https://www.linkedin.com/in/yasmin-marques-547641247/"><img src="../assets/icons/linkedin.svg" alt="linkedin"></a>
+                </div>
             </div>
 
             <div class="suporte">
                 <h2>Atendimento ao Cliente</h2>
 
-                <div class="aaa">
-                    <p>Seg. a Sex. -9h ás 18h</p>
+                
+                    <p>Seg. a Sex. 9h ás 18h</p>
                     <p>Perguntas Frequentes</p>
                     <p>Rastrear Pedido</p>
                     <p>Contato</p>
-                </div>
-
             </div>
 
             <div class="help">
-                <div class="poin">
+                <div class="point">
                     <img src="../assets/icons/local.svg" alt="Point">
                     <p>Rua da Conexão Movel 404<br>12345-678 - São Paulo</p>
                 </div>
