--- a/home/index.html
+++ b/home/index.html
@@ -15,9 +15,9 @@
         </div>
         <nav>
             <a href="#">Início</a>
-            <a href="sobre">Sobre</a>
-            <a href="produtos">Produtos</a>
-            <a href="sup">Suporte</a>
+            <a href="#about">Sobre</a>
+            <a href="#produtos">Produtos</a>
+            <a href="#sup">Suporte</a>
         </nav>
         <div class="input-pesquisa">
             <input type="text" placeholder="Pesquisar" id="pesquisa">
@@ -37,7 +37,7 @@
             " alt="Banner principal">
         </div>
 
-        <div class="about">
+        <div id="about" class="about">
             <div>
                 <img src="../assets/imgs/imagem-Ilu1.png" alt="Ilustração celulares">
             </div>
@@ -54,7 +54,7 @@
                 <img src="../assets/imgs/Banner2.png" alt="">
             </div>
 
-            <div class="produtos">
+            <div id="produtos" class="produtos">
                 <h2>Nossos Produtos</h2>
                 <input type="" placeholder="Iphone" id="produtos-pesquisa">
             </div>
@@ -182,7 +182,7 @@
                 </div>
             </div>
 
-            <div class="suporte">
+            <div id="sup" class="suporte">
                 <h2>Atendimento ao Cliente</h2>
 
                 
@@ -195,12 +195,13 @@
             <div class="help">
                 <div class="point">
                     <img src="../assets/icons/local.svg" alt="Point">
-                    <p>Rua da Conexão Movel 404<br>12345-678 - São Paulo</p>
+                    <p>contato@cellisfy.com.br</p>
                 </div>
 
                 <div class="email">
                     <img src="../assets/icons/email.svg" alt="email">
-                    <p>contato@cellisfy.com.br</p>
+                    
+                    <p>Rua da Conexão Movel 404<br>12345-678 - São Paulo</p>
                 </div>
             </div>
 
